kustomize/veidemann-health-check-api/minikube/patch-add-env.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: veidemann-health-check-api
spec:
  template:
    spec:
      containers:
        - name: veidemann-health-check-api
