kustomize/veidemann-health-check-api/minikube/patch-mount-config-file.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: veidemann-health-check-api
spec:
  template:
    spec:
      containers:
        - name: veidemann-health-check-api
          volumeMounts:
            - name: configuration
              mountPath: /out/config.yaml
              subPath: config.yaml
      volumes:
        - name: configuration
          configMap:
            name: veidemann-health-check-api-config
