kustomize/veidemann-health-check-api/minikube/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: veidemann-health-check-api
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: veidemann.local
      http:
        paths:
          - backend:
              serviceName: veidemann-health-check-api
              servicePort: http
            path: /health$
